--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <hr> 
 
     <h2>About Me</h2>
-    <p>Hi, I am Aaditya 1st year undergraduate student passionate about data science, blockchain networks and cryptography. Currently I am doing a audio based highlight detection project under BYOP by data science group at IITR, and also learning blockchain and its application under the guidance of BlocSoc club. </p>
-    
+    <p>Hi, I am Aaditya 1st year undergraduate student passionate about data science, blockchain networks and cryptography. Currently I am doing a audio based highlight detection project under BYOP by data science group at IITR, and also learning blockchain and its application under the guidance of BlocSoc club. I am excited to see what i will learn from this cohort! </p>
+    <p><a href="YOUR_LINKEDIN_URL">LinkedIn</a></p>
+    <p><a href="YOUR_GITHUB_URL">GitHub</a></p>
     <h2>Smart Contract</h2>
     
     <button id="connectBtn">Connect MetaMask</button>
